# mcts_checkers

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README (copy 1).md  README.md  install.sh  main.cpp
include/mcts_checkers/: action_application_funcs.hpp  action_collection_funcs.hpp  board_form.hpp  checkers_data.hpp  checkers_funcs.hpp  checkers_types.hpp  main_form.hpp  mcts.hpp  statistic_form.hpp  utils.hpp
include/mcts_checkers/game/: state.hpp
include/mcts_checkers/game/player_turn/: state.hpp
src/: action_application_funcs.cpp  action_collection_funcs.cpp  board_form.cpp  checkers_data.cpp  checkers_funcs.cpp  main_form.cpp  mcts.cpp  statistic_form.cpp
src/game/: state.cpp
src/mcts_checkers/: action_application_funcs.cpp  action_application_funcs.hpp  action_collection_funcs.hpp  allocators.hpp  board_form.cpp  board_form.hpp  checkers_data.cpp  checkers_data.hpp  checkers_types.hpp  index_converters.hpp  main_form.cpp  main_form.hpp  mcts.cpp  mcts.hpp  statistic_form.cpp  statistic_form.hpp  utils.hpp
src/mcts_checkers/board/: ai_form.cpp  ai_form.hpp  form.cpp  form.hpp  human_form.cpp  human_form.hpp  utils.cpp  utils.hpp
src/mcts_checkers/board/ai/: form.cpp  form.hpp
src/mcts_checkers/board/human/: form.cpp  form.hpp  initial.cpp  initial.hpp
tests/: CMakeLists.txt  calc_max_jumps.cpp  test_attacks.cpp  test_attacks_0.json
tests/include/mcts_checkers_test/: mcts_checkers_test.hpp
tests/src/: mcts_checkers_test.cpp
tests/test_attacks/: CMakeLists.txt  data.json  test.cpp
tests/test_index_conversions/: CMakeLists.txt  data.json  test.cpp
tests/test_king_attacks/: CMakeLists.txt  data.json  test.cpp
tests/test_moves/: CMakeLists.txt  data.json  test.cpp
